# agentic-legal-rag-suite

./: .env.example  .gitignore  .gitignore 2  AGENTS.md  CLAUDE.md  LICENSE  OVERVIEW.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  docker-compose.qdrant.yml  list_ollama_models.py  note_incontro_16_02.md  pyproject.toml
.mypy_cache/: missing_stubs
baselines/: __init__.py  artifacts.py  benchmark.py  bm25.py  bm25_index.py  eval_retrieval.py
docs/: index.md  notebook_01_build_questions_no_hint.md  notebook_02_evaluation_no_rag.md  notebook_03_laws_graph_pipeline.md  notebook_04_qdrant_indexing_pipeline.md  notebook_05_langgraph_rag_pipeline.md  notebook_06_advanced_rag_pipeline.md
evaluation/: questions.csv
laws_ingestion/: README 2.md  README.md  __init__.py  __main__.py  debug.py  export.py  html_blocks.py  ingest.py  qa.py  references.py
notebooks/: 01_laws_ingestion_walkthrough.ipynb  01_laws_preprocessing.ipynb  01b_laws_graph_exploration.ipynb  02_evaluation_dataset.ipynb  02b_oracle_context_evaluation.ipynb  03_indexing_contract.ipynb  03_laws_graph_pipeline.ipynb  04_no_rag_baseline.ipynb  04_qdrant_indexing_pipeline.ipynb  05_langgraph_rag_pipeline.ipynb  05_simple_rag.ipynb  06_advanced_graph_rag.ipynb  06_advanced_rag_pipeline.ipynb  06b_retrieval_diagnostics.ipynb  README.md  utopia_api_smoke_test.ipynb
scripts/: migrate_qdrant_local_to_server.py
src/: __init__.py
tests/: test_advanced_graph_rag.py  test_advanced_graph_rag_interactive.py  test_benchmark_parsing.py  test_bm25.py  test_corpus_registry.py  test_data_preparation_laws_graph_pipeline.py  test_evaluation_dataset.py  test_evaluation_reporting.py  test_indexing_chunk_refinement.py  test_indexing_contract.py  test_indexing_embeddings.py  test_indexing_incremental.py  test_indexing_qdrant_filters.py  test_ingest_events_extraction.py  test_ingest_passages_and_links.py  test_ingest_relations_normalizer.py  test_ingest_status_classifier.py  test_law_references.py  test_laws_preprocessing_contract.py  test_laws_preprocessing_core.py  test_laws_preprocessing_refactor.py  test_no_rag_baseline.py  test_notebook_bootstrap.py  test_oracle_context_evaluation.py  test_project_import.py  test_qdrant_store_sparse.py  test_rag_answer_guard.py  (+18 more)
(+1119 files in other folders)
