[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-legal-rag-suite"
version = "0.1.0"
description = "Minimal, reproducible Legal RAG research codebase for a thesis project."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "lxml>=6.0",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
]
notebooks = [
    "ipykernel>=7.0",
    "jupyter>=1.1",
    "pandas>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/legal_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
